--- a/FileUploadService/appsettings.json
+++ b/FileUploadService/appsettings.json
@@ -31,9 +31,9 @@
     }
   },
   "AWS": {
-    "ServiceURL": "https://s3.storage.selcloud.ru",
-    "AccessKey": "71ea51c20d0640468ce81a83728dc0cd",
-    "Secretkey": "6fc6afc2eeca4d7ebba7522f21c2f46d",
-    "BucketName": "file-upload-backet1"
+    "ServiceURL": "ServiceURL",
+    "AccessKey": "AccessKey",
+    "Secretkey": "Secretkey",
+    "BucketName": "BucketName"
   }
 }
